--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -110,7 +110,7 @@
                     class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-2 px-4 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300">Book
                     a Demo</a>
             </div>
-            <section class=" mt-7 text-center scroll-mt-20 md:pt-24 lg:pt-15" id="why-vertax">
+            <section class=" mt-7 text-center scroll-mt-20 md:pt-24 lg:pt-10" id="why-vertax">
                 <h2
                     class="font-poppins font-semibold text-2xl md:text-4xl text-white dark:md:text-customGreen md:text-customblue leading-normal md:leading-none tracking-wide md:tracking-normal">
                     Why Vertacx
@@ -171,7 +171,7 @@
                     </p>
                 </div>
             </section>
-            <section class="container mx-auto mt-12 scroll-mt-20 md:pt-24 lg:pt-18" id="our-programs">
+            <section class="container mx-auto mt-12 scroll-mt-20 md:pt-24 lg:pt-10" id="our-programs">
                 <div
                     class="dark:text-customGreen text-customblue sm:text-[32px] sm:leading-[28px] sm:tracking-[0.64px] text-[20px] leading-[26px] tracking-[0.4px] font-semibold">
                     Our Programs
@@ -236,7 +236,7 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../assets/images/icons/Book-mark-icon.svg" alt="book-mark" class="mx-auto dark:block hidden" />
+                            <img src="../assets/images/icons/Book-mark-icon.svg" alt="book-mark" class="mx-auto silck-dark dark:block hidden" />
                             <img src="../assets/images/icons/Book-mark-light.svg" alt="book-mark" class="mx-auto dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Lorem, ipsum
@@ -257,9 +257,9 @@
                 </div>
             </section>
 
-            <section id="how-it-works" class="mt-14 scroll-mt-20 md:pt-24 lg:pt-14">
+            <section id="how-it-works" class="mt-14 scroll-mt-20 md:pt-24 lg:pt-10">
                 <p
-                    class="mt-4 text-lg md:text-xl dark:text-white text-customblue md:text-base md:font-normal md:font-medium md:leading-28 md:tracking-wide lg:text-2xl lg:tracking-wider">
+                    class="mt-4 text-lg md:text-xl dark:text-white text-customblue  md:font-normal  md:leading-28 md:tracking-wide lg:text-2xl lg:tracking-wider">
                     How It Works
                 </p>
                 <h2
@@ -274,8 +274,8 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>1. Career Assessments</h1>
-                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark:block hidden" />
-                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer dark:hidden block" />
+                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark-icon dark:block hidden"/>
+                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer light-icon dark:hidden block"/>
                         </div>
                     </div>
                     <div class="accordion-content overflow-hidden transition-max-height duration-500 ease-in hidden">
@@ -292,8 +292,8 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>2. Program Onboarding</h1>
-                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark:block hidden" />
-                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer dark:hidden block" />
+                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark-icon  dark:block hidden" />
+                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
                     <div class="accordion-content overflow-hidden transition-max-height duration-500 ease-in hidden">
@@ -310,8 +310,8 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>3. Learning Sprint and retrospective</h1>
-                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointe dark:block hidden" />
-                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer dark:hidden block" />
+                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointe dark-icon dark:block hidden" />
+                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
                     <div class="accordion-content overflow-hidden transition-max-height duration-500 ease-in hidden">
@@ -328,8 +328,8 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>4. Capstone Project</h1>
-                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark:block hidden" />
-                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer dark:hidden block" />
+                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark-icon dark:block hidden" />
+                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
                     <div class="accordion-content overflow-hidden transition-max-height duration-500 ease-in hidden">
@@ -346,8 +346,8 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>5. Internship</h1>
-                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark:block hidden" />
-                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer dark:hidden block" />
+                            <img src="../assets/images/icons/collapse-close-icon.svg" alt="" class="cursor-pointer dark-icon dark:block hidden" />
+                            <img src="../assets/images/icons/collapse-light-close-icon.svg" alt="" class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
                     <div class="accordion-content overflow-hidden transition-max-height duration-500 ease-in hidden">
