--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -47,6 +47,9 @@
                         href="#how-it-works">How It Works</a>
                 </li>
             </ul>
+            <button id="theme-toggle-mobile" class="focus:outline-none mt-4">
+                <img id="theme-icon-mobile" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode" class="w-8 h-8" />
+            </button>
         </nav>
     </header>
     <!-- Desktop Header -->
@@ -79,9 +82,8 @@
             </nav>
             <div class="hidden md:flex items-center space-x-4">
                 <!-- Dark/Light mode toggle button -->
-                <button id="theme-toggle" class="focus:outline-none">
-                    <img id="theme-icon" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode"
-                        class="w-8 h-8" />
+                <button id="theme-toggle-desktop" class="focus:outline-none">
+                    <img id="theme-icon-desktop" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode" class="w-8 h-8" />
                 </button>
                 <button
                     class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-2 px-4 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300"
@@ -500,6 +502,6 @@
 <!-- Slick Slider JS -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
-<script type="text/javascript" src="../assets/js/Home-page.js?v=15"></script>
+<script type="text/javascript" src="../assets/js/Home-page.js?v=17"></script>
 
 </html>
