--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -49,6 +49,11 @@
                         href="#how-it-works">How It Works</a>
                 </li>
             </ul>
+            <button id="curriculumModalButton"
+                    class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-2 px-4 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300"
+                    onclick="location.href='#curriculum'">
+                    Curriculum
+                </button>
             <button id="theme-toggle-mobile" class="focus:outline-none mt-4">
                 <img id="theme-icon-mobile" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode"
                     class="w-8 h-8" />
@@ -515,11 +520,11 @@
                         for="interested">WE ARE INTERESTED IN</label>
                     <select id="interested"
                         class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm">
-                        <option class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">SELECT AN OPTION</option>
-                        <option class=" dark:text-white text-customblack bg-white dark:bg-[#212121]  hover:bg-opacity-[40%] rounded">PART TIME</option>
-                        <option class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">FULL TIME</option>
-                        <option class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">PERMANENT</option>
-                        <option class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">Online</option>
+                        <option value="select an option"  class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">SELECT AN OPTION</option>
+                        <option value="part time" class=" dark:text-white text-customblack bg-white dark:bg-[#212121]  hover:bg-opacity-[40%] rounded">PART TIME</option>
+                        <option value="full time" class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">FULL TIME</option>
+                        <option value="permanent" class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">PERMANENT</option>
+                        <option value="Online" class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">Online</option>
                     </select>
                 </div>
 
@@ -528,9 +533,8 @@
                         for="weAre">WE ARE</label>
                     <select id="weAre"
                         class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm">
-                        <option class="font-normal text-sm leading-6 dark:text-white text-customblack">SELECT AN OPTION
-                        </option>
-
+                        <option value="select an option"  class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">SELECT AN OPTION</option>
+                        <option value="option1"  class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">OPTION 1</option>
                     </select>
                 </div>
             </div>
@@ -539,9 +543,8 @@
                     for="stage">WHAT STAGE ARE YOU AT</label>
                 <select id="stage"
                     class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm ">
-                    <option class="font-normal text-sm leading-6 dark:text-white text-customblack">SELECT AN OPTION
-                    </option>
-
+                    <option value="select an option"  class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">SELECT AN OPTION</option>
+                    <option value="Option1"  class=" dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">OPTION1</option>
                 </select>
             </div>
             <div class="mb-5">
