--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -29,7 +29,7 @@
         </button>
     </div>
     <nav id="sidebarMenu"
-        class="mt-4 px-4 fixed top2-0 left-0 h-[300px] w-full dark:bg-black bg-white transform -translate-x-full transition-transform duration-500 ease-in-out">
+        class="mt-4 px-4 fixed top2-0 left-0 h-[300px] w-full dark:bg-black bg-white transform -translate-x-full  duration-300 transition-colors ease-in-out">
         <ul class="space-y-4 ml-1 mt-5">
             <li>
                 <a class="dark:text-white text-customblue hover:text-customGreen transition-colors"
