--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -12,12 +12,10 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <style>
-
-    </style>
+    
 </head>
 
-<body class="dark:bg-black bg-white font-poppins  transition-colors duration-500">
+<body class="dark:bg-black bg-white font-poppins font-display-swap  transition-colors duration-500">
     <header
     class="sm:block md:hidden lg:hidden xl:hidden 2xl:hidden pt-10 pb-4 sticky top-0 dark:bg-black bg-white z-50 transition-colors duration-300">
     <div class="flex items-center justify-between px-4">
