--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -122,14 +122,14 @@
                     class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-2 px-4 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300">Get
                     Started</a>
             </div>
-            <section class=" mt-7 text-center scroll-mt-20 md:pt-24 lg:pt-10" id="why-vertax">
-                <h2
+            <section class=" mt-0 text-center scroll-mt-20 md:pt-24 lg:pt-10" id="why-vertax">
+                <!-- <h2
                     class="font-poppins font-semibold text-2xl md:text-4xl  dark:text-customGreen text-customblue leading-normal md:leading-none tracking-wide md:tracking-normal">
                     Why Vertacx
-                </h2>
+                </h2> -->
                 <p
                     class="mt-4 text-lg md:text-2xl max-w-lg mx-auto dark:text-white text-customblack leading-[30px] md:leading-[40px] tracking-[1.28px] md:tracking-[0.8px] font-normal md:font-semibold">
-                    If you're looking to build a resilient career- you've come to the
+                     career- you've come to the
                     <br class="hidden md:block" />
                     right place.
                 </p>
