--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -107,7 +107,7 @@
         <div class="max-w-custom mx-auto px-4">
             <h1
                 class="dark:text-customGreen text-customblue mt-10 text-4xl md:text-6xl font-semibold leading-10 md:leading-[80px] tracking-[0.64px] md:tracking-[1.28px]">
-                Unlock Your Future with <br> Skills That Matter
+                Unlock Your Future with <br class="hidden md:inline-block"> Skills That Matter
             </h1>
             <p
                 class="mt-6 text-base md:text-[24px] font-normal leading-6 md:leading-[36px] tracking-[0.32px] md:tracking-[0.48px] w-full lg:w-[740px] mx-auto dark:text-white text-customblack">
