--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="vertacX">
+    <meta name="description" content="Unlock Your Future with Skills That Matter"/>
+    <meta name="keywords" content="web development, academy, career build, Workplace skills, Essential soft skills"/>
+    <meta property="og:title" content="vertacX">
+    <meta property="og:description" content="Unlock Your Future with Skills That Matter">
+    <meta property="og:link" url="https://www.greypathsolutions.com/development/Vertacx/src/pages/home-page.html">
+    <meta property="og:images" src="../assets/images/logo/vertacx-logo.svg">
     <title>Home Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
