--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -9,9 +9,13 @@
     <meta name="keywords" content="web development, academy, career build, Workplace skills, Essential soft skills"/>
     <meta property="og:title" content="vertacX">
     <meta property="og:description" content="Unlock Your Future with Skills That Matter">
-    <meta property="og:link" url="https://www.greypathsolutions.com/development/Vertacx/src/pages/home-page.html">
-    <meta property="og:images" src="../assets/images/logo/vertacx-logo.svg">
-    <title>Home Page</title>
+    <meta property="og:link" content="https://www.greypathsolutions.com/development/Vertacx/src/pages/home-page.html">
+    <meta property="og:image" content="../assets/images/logo/vertacx-light-logo.svg">
+    <meta property="og:image:alt" content="vertacX thumbnail" />
+    <meta property="og:image:type" content="image/svg" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="53" />
+    <title>vertacX</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/css/output.css" />
