content and fav icon and og properties updated

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -10,12 +10,10 @@
     <meta property="og:title" content="vertacX">
     <meta property="og:description" content="Unlock Your Future with Skills That Matter">
     <meta property="og:link" content="https://www.greypathsolutions.com/development/Vertacx/src/pages/home-page.html">
-    <meta property="og:image" content="../assets/images/logo/vertacx-light-logo.svg">
+    <meta property="og:image" content="../assets/images/logo/og-image.png">
     <meta property="og:image:alt" content="vertacX thumbnail" />
-    <meta property="og:image:type" content="image/svg" />
-    <meta property="og:image:width" content="200" />
-    <meta property="og:image:height" content="53" />
     <title>vertacX</title>
+    <link rel="icon" type="image/png" href="../assets/images/icons/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/css/output.css" />
@@ -55,6 +53,10 @@
             <li>
                 <a class="dark:text-white text-customblue hover:text-customGreen transition-colors"
                     href="#how-it-works">How It Works</a>
+            </li>
+            <li>
+                <a class="dark:text-white text-customblue hover:text-customGreen transition-colors"
+                    href="#about-us">About us</a>
             </li>
         </ul>
         <button id="curriculumModalButtonMobile"
@@ -96,6 +98,10 @@
                     <li>
                         <a class="dark:text-white text-black dark:hover:text-customGreen hover:text-customblue transition-colors"
                             href="#how-it-works">How It Works</a>
+                    </li>
+                    <li>
+                        <a class="dark:text-white text-black dark:hover:text-customGreen hover:text-customblue transition-colors"
+                            href="#about-us">About us</a>
                     </li>
                 </ul>
             </nav>
@@ -199,10 +205,10 @@
                 <div class="slick-slider mt-10">
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10 ">
-                            <img src="../assets/images/icons/Book-mark-icon.svg" alt="book-mark"
-                                class="mx-auto   dark:!block !hidden " />
-                            <img src="../assets/images/icons/Book-mark-light.svg" alt="book-mark"
-                                class="mx-auto  dark:hidden block" />
+                            <img src="../assets/images/icons/frontend-dark-icon.svg" alt="book-mark"
+                                class="mx-auto   dark:!block !hidden w-[190px] h-[176px]" />
+                            <img src="../assets/images/icons/Frontend-light-icon.svg" alt="book-mark" 
+                                class="mx-auto  dark:hidden block w-[190px] h-[176px]" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Front End Development
                             </div>
@@ -218,10 +224,10 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../assets/images/icons/Book-mark-icon.svg" alt="book-mark"
-                                class="mx-auto    dark:!block !hidden" />
-                            <img src="../assets/images/icons/Book-mark-light.svg" alt="book-mark"
-                                class="mx-auto dark:hidden block" />
+                            <img src="../assets/images/icons/backend-dark-icon.svg" alt="book-mark"
+                                class="mx-auto  w-[190px] h-[176px]  dark:!block !hidden" />
+                            <img src="../assets/images/icons/backend-light-icon.svg" alt="book-mark"
+                                class="mx-auto w-[190px] h-[176px] dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Backend Development
                             </div>
@@ -236,10 +242,10 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../assets/images/icons/Book-mark-icon.svg" alt="book-mark"
-                                class="mx-auto    dark:!block !hidden" />
-                            <img src="../assets/images/icons/Book-mark-light.svg" alt="book-mark"
-                                class="mx-auto dark:hidden block" />
+                            <img src="../assets/images/icons/ai-dark-icon.svg" alt="book-mark"
+                                class="mx-auto w-[190px] h-[176px]   dark:!block !hidden" />
+                            <img src="../assets/images/icons/ai-light-icon.svg" alt="book-mark"
+                                class="mx-auto w-[190px] h-[176px] dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 AI/ML Development
                             </div>
@@ -255,10 +261,10 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../assets/images/icons/Book-mark-icon.svg" alt="book-mark"
-                                class="mx-auto    dark:!block !hidden" />
-                            <img src="../assets/images/icons/Book-mark-light.svg" alt="book-mark"
-                                class="mx-auto dark:hidden block" />
+                            <img src="../assets/images/icons/low-dark-icon.svg" alt="book-mark"
+                                class="mx-auto w-[190px] h-[176px]   dark:!block !hidden" />
+                            <img src="../assets/images/icons/low-code-icon.svg" alt="book-mark"
+                                class="mx-auto w-[190px] h-[176px] dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Low Code Development
                             </div>
@@ -432,7 +438,7 @@
                     </a>
                 </div>
             </section>
-            <section class="mt-12">
+            <section class="mt-12" id="about-us">
                 <img src="../assets/images/logo/vertacx-logo.svg" alt="" class="w-48 h-auto mx-auto dark:block hidden">
                 <img src="../assets/images/logo/vertacx-light-logo.svg" alt=""
                     class="w-48 h-auto mx-auto dark:hidden block">
@@ -444,7 +450,7 @@
         </div>
     </main>
 
-    <footer class="dark:bg-black bg-white py-4 mt-8 transition-colors duration-300">
+    <footer class="dark:bg-black bg-white py-4 pt-10 transition-colors duration-300">
         <ul class="flex justify-center space-x-4 mb-4">
             <li>
                 <a href="javascript:void(0);">
@@ -477,7 +483,7 @@
             Lawson's road, Contonment, Trichy - 620001.</p>
     </footer>
     <div id="swipeUpContainer"
-        class="swipe-up-container flex justify-end 2xl:pr-12 pl-2 pb-5 transform scale-0 transition-transform duration-300 fixed bottom-5 right-5"
+        class="swipe-up-container flex justify-end 2xl:pr-12 pl-2 pb-5 transform scale-0 transition-colors duration-300 fixed bottom-5 right-5"
         onclick="scrollToTop()">
         <img src="../assets/images/icons/swipe-up.png" alt="Swipe Up" class="w-12 h-12 dark:block hidden" />
         <img src="../assets/images/icons/swipe-up-light.svg" alt="Swipe Up" class="w-12 h-12 dark:hidden block" />
@@ -504,30 +510,36 @@
                             SELECT AN OPTION</option>
                         <option value="part time"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
-                            PART TIME</option>
+                            Front End Development</option>
                         <option value="full time"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
-                            FULL TIME</option>
+                            Back End Development</option>
                         <option value="permanent"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
-                            PERMANENT</option>
+                            AI/ML Development</option>
                         <option value="Online"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
-                            Online</option>
+                            Low Code Development</option>
                     </select>
                 </div>
 
                 <div>
                     <label class="block mb-3 font-medium text-[12px] leading-[15px] dark:text-customblack text-white"
-                        for="weAre">WE ARE</label>
+                        for="weAre">PROGRAM TYPE</label>
                     <select id="weAre"
                         class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm">
                         <option value="select an option"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
                             SELECT AN OPTION</option>
-                        <option value="option1"
+                        <option value="fulltime"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
-                            OPTION 1</option>
+                            Full Time Offline</option>
+                        <option value="part-time"
+                        class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                        Part time Offline</option>
+                        <option value="Online"
+                        class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                        Online</option>
                     </select>
                 </div>
             </div>
@@ -539,9 +551,24 @@
                     <option value="select an option"
                         class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
                         SELECT AN OPTION</option>
-                    <option value="Option1"
-                        class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
-                        OPTION1</option>
+                    <option value="first-year"
+                    class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                    First Year Student</option>
+                    <option value="Second-year"
+                    class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                    Second Year Student</option>
+                    <option value="third-year"
+                    class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                    3rd Year Student,</option>
+                    <option value="final-year"
+                    class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                    Final Year Student</option>
+                    <option value="fresher"
+                    class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                    Fresh Graduate</option>
+                    <option value="experience"
+                    class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                    1-2 years Experience</option>
                 </select>
             </div>
             <div class="mb-5">
