--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -12,6 +12,9 @@
     <meta property="og:link" content="https://www.greypathsolutions.com/development/Vertacx/src/pages/home-page.html">
     <meta property="og:image" content="../assets/images/logo/og-image.png">
     <meta property="og:image:alt" content="vertacX thumbnail" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1080">
     <title>vertacX</title>
     <link rel="icon" type="image/png" href="../assets/images/icons/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
