--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Unlock Your Future with Skills That Matter"/>
     <meta name="keywords" content="web development, academy, career build, Workplace skills, Essential soft skills"/>
     <meta property="og:title" content="vertacX">
-    <meta property="og:description" content="Unlock Your Future with Skills That Matter">
+    <meta property="og:description" content="Unlock Your Future with Skills That Matter, Forge a resilient career with a partner
+    who puts people first.">
     <meta property="og:link" content="https://www.greypathsolutions.com/development/Vertacx/src/pages/home-page.html">
     <meta property="og:image" content="../assets/images/logo/og-image.png">
     <meta property="og:image:alt" content="vertacX thumbnail" />
